--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/checkin_result"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:layout_below="@+id/dialog_title"
+    android:orientation="vertical"
 >
     <TextView
         android:id="@+id/score_message"
@@ -14,13 +15,16 @@
         android:textAppearance="@android:style/TextAppearance.Medium"
         android:textColor="@color/black_end"
         android:background="@drawable/lgrey_gradient" />
+    <ListView
+        android:id="@+id/result_list"
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="0.5" />
     <RelativeLayout
         android:id="@+id/footer"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:layout_alignParentBottom="true"
         android:background="@drawable/black_gradient"
-        android:layout_weight="1"
     >
         <TextView
             android:id="@+id/totals"
@@ -53,10 +57,4 @@
             android:visibility="invisible"
             android:textAppearance="@style/TextStyleWhite" />
     </RelativeLayout>
-    <ListView
-        android:id="@+id/result_list"
-        android:layout_below="@id/score_message"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/footer" />
-</RelativeLayout>
+</LinearLayout>
